deployment/base/manifests/guardrails/1-hap-model-container.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-guardrails-hap
spec:
  ports:
    - name: minio-client-port
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio-guardrails-hap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardrails-container-deployment-hap # <--- change this
labels:
    app: minio-guardrails-hap # <--- change this to match label on the pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-guardrails-hap  # <--- change this to match label on the pod
  template: # => from here down copy and paste the pods metadata: and spec: sections
    metadata:
      labels:
        app: minio-guardrails-hap
        maistra.io/expose-route: 'true'
      name: minio-guardrails-hap
    spec:
      affinity:
        nodeAffinity:
          # This is the "Preference" (Soft Rule)
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: "nvidia.com/gpu.present"
                operator: In
                values:
                - "true"    
      volumes:
      - name: model-volume
        persistentVolumeClaim:
          claimName: guardrails-models-claim-hap
      containers:
        - args:
            - server
            - /models
          image: quay.io/trustyai/modelmesh-minio-examples:latest
          name: minio-guardrails-hap
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: "/models/"
              name: model-volume
      tolerations:
        - key: nvidia-gpu-only
          operator: Exists
          effect: NoSchedule
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
